fix(slider): high contrast on chromium edge

--- a/projects/ng-aquila/src/slider/slider.component.scss
+++ b/projects/ng-aquila/src/slider/slider.component.scss
@@ -266,6 +266,7 @@ $wrapper-padding-bottom: (($handle-diameter - $background-height) * 0.5) + nx-sp
     .nx-slider__value {
       border-color: GrayText;
       color: GrayText;
+      background: Canvas;
     }
 
     .nx-slider__arrow {
